shoe app with sql lite databse for sellers

--- a/app/src/main/res/layout/activity_upload_form.xml
+++ b/app/src/main/res/layout/activity_upload_form.xml
@@ -101,6 +101,7 @@
         android:layout_marginBottom="96dp"
         android:background="@drawable/rounded_corners"
         android:text="Submit"
+        android:onClick="saveData"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
