--- a/app/src/main/res/layout/fragment_d.xml
+++ b/app/src/main/res/layout/fragment_d.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginHorizontal="60dp"
         android:layout_marginTop="60dp"
         android:src="@drawable/colors"
@@ -21,17 +21,20 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="56dp"
         android:fontFamily="sans-serif-condensed-medium"
-        android:paddingHorizontal="70dp"
+        android:textAlignment="center"
+        android:paddingHorizontal="20dp"
         android:paddingVertical="45dp"
         android:text="@string/text3"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        android:gravity="center_horizontal" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_previous_d"
