--- a/app/src/main/res/layout/update_delete_dialog.xml
+++ b/app/src/main/res/layout/update_delete_dialog.xml
@@ -8,7 +8,7 @@
 
     <EditText
         android:id="@+id/editTextBrand"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="3dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,6 +20,7 @@
 
     <EditText
         android:id="@+id/editTextPrice"
+        android:layout_marginTop="3dp"
         app:layout_constraintTop_toBottomOf="@id/editTextBrand"
         app:layout_constraintStart_toStartOf="@id/editTextBrand"
         app:layout_constraintEnd_toEndOf="@id/editTextBrand"
@@ -31,7 +32,7 @@
 
     <EditText
         android:id="@+id/editTextContactName"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="3dp"
         app:layout_constraintTop_toBottomOf="@id/editTextPrice"
         app:layout_constraintStart_toStartOf="@id/editTextPrice"
         app:layout_constraintEnd_toEndOf="@id/editTextPrice"
@@ -43,7 +44,7 @@
 
     <EditText
         android:id="@+id/editTextContactNumber"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="3dp"
         app:layout_constraintTop_toBottomOf="@id/editTextContactName"
         app:layout_constraintStart_toStartOf="@id/editTextContactName"
         app:layout_constraintEnd_toEndOf="@id/editTextContactName"
@@ -52,30 +53,20 @@
         android:layout_marginHorizontal="10dp"
         android:hint="Enter Contact Number" />
 
-    <TextView
-        android:id="@+id/uploadTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Click to upload the new image"
-        android:textColor="#049F9F"
-        android:textAllCaps="false"
-        android:layout_marginTop="7dp"
-        app:layout_constraintTop_toBottomOf="@id/editTextContactNumber"
-        app:layout_constraintStart_toStartOf="@id/editTextContactNumber"
-        app:layout_constraintEnd_toEndOf="@id/editTextContactNumber"
-        />
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginHorizontal="32dp"
         android:gravity="center"
         android:weightSum="2"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/uploadTextView"
-        app:layout_constraintStart_toStartOf="@+id/uploadTextView"
-        app:layout_constraintTop_toBottomOf="@+id/uploadTextView">
+        android:layout_marginBottom="10dp"
+        app:layout_constraintTop_toBottomOf="@id/editTextContactNumber"
+        app:layout_constraintStart_toStartOf="@id/editTextContactNumber"
+        app:layout_constraintEnd_toEndOf="@id/editTextContactNumber">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnUpdate"
