--- a/app/src/main/res/layout/update_delete_dialog.xml
+++ b/app/src/main/res/layout/update_delete_dialog.xml
@@ -76,11 +76,13 @@
             android:layout_marginHorizontal="5dp"
             android:textColor="@color/white"
             android:layout_weight="1"
+            android:layout_marginBottom="10dp"
             android:text="Update" />
 
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnDelete"
+            android:layout_marginBottom="10dp"
             android:layout_marginHorizontal="5dp"
             android:background="@color/teal_200"
             android:layout_width="wrap_content"
